feat(mesh-gateway): cluster health rollup from watched services
Checkpoint 3 of the mesh-gateway build.

Health is computed by polling the readiness of the services named in
CLUSTER_SERVICES, because the gateway's own readiness cannot carry the signal: it
has no datastore and a broker outage deliberately does not fail it, so announcing
that would put a constant, meaningless "ready" on the mesh while a visibly broken
baseline rendered as healthy in every peer's unified view.

Three states rather than two. A baseline whose every service is gone is a
materially different operator situation from one with a single flaky service, and
folding both into "degraded" would render them identically in a peer's unified
view: all up is ready, some up is degraded, none up is down.

A service counts as UP only on an HTTP 200. A non-200, a timeout and a refused
connection are all DOWN - "reachable but broken" and "not there at all" are
equally not-up to a peer deciding whether to send an operator here. The tests
drive real HTTP servers on ephemeral ports rather than a mocked client, so that
distinction is genuinely exercised.

Polls fan out in parallel with a timeout well inside the heartbeat, and an
unreachable service resolves to DOWN rather than failing the future, so one hung
service can never delay or suppress an announce - going silent would make peers
believe the whole baseline had vanished, which is worse than reporting degraded.
An unreachable service logs at DEBUG, not WARN: it is an ordinary outcome of a
poll that runs every ten seconds.

Also fixes an ordering bug these tests caught in the full reactor run: both this
service and MeshGatewayConfig used Map.copyOf, which is unordered AND randomizes
its iteration seed per JVM start. That scrambled the per-service breakdown between
runs, so the API response order was non-deterministic and these tests would have
flaked roughly half the time rather than failing consistently. Both now copy into
a LinkedHashMap, keeping the confi